--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>He Vet | Teleorientação Veterinária 24/7</title>
+    <title>Hey Vet | Teleorientação Veterinária 24/7</title>
     <meta name="description"
-        content="Veterinários com CRMV ativo prontos para te orientar a qualquer hora. Teleorientação veterinária 24 horas, 7 dias por semana.">
+        content="Veterinários com CRMV ativo prontos para te orientar a qualquer hora. Teleorientação Veterinária 24 horas, 7 dias por semana.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -741,5 +741,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
