Correção de escrita

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <p class="hero-big-subtitle">
                     De uma simples dúvida sobre alimentação até uma emergência real:
-                    <strong>veterinários prontos</strong> para orientar você em menos de <strong>5 minutos</strong>.
+                    <strong>veterinários prontos</strong> para orientar você de forma <strong> rápida </strong>.
                 </p>
 
                 <div class="hero-actions-immersive">
@@ -99,8 +99,8 @@
 
                 <div class="hero-trust-badges">
                     <div>
-                        <span class="trust-number">+10.000</span>
-                        <span class="trust-label">Pets Atendidos</span>
+                        <span class="trust-number">ATÉ 2 PETS</span>
+                        <span class="trust-label">POR ASSINATURA</span>
                     </div>
                     <div class="trust-divider"></div>
                     <div>
@@ -131,7 +131,7 @@
     <!-- Benefits Section -->
     <section class="benefits">
         <div class="container">
-            <h2 class="section-title">Por Que Escolher a <span class="gradient-text">He Vet</span>?</h2>
+            <h2 class="section-title">Por Que Escolher a <span class="gradient-text">Hey Vet</span>?</h2>
             <div class="benefits-grid">
                 <div class="benefit-card card-3d" data-tilt>
                     <div class="benefit-icon">
@@ -182,7 +182,7 @@
                         </svg>
                     </div>
                     <h3>Economia Inteligente</h3>
-                    <p>Uma emergência custa R$ 300+. He Vet: <span class="highlight-green">menos de R$ 1/dia</span>.
+                    <p>Uma emergência custa +R$ 200. A Hey Vet: <span class="highlight-green">menos de R$ 1/dia</span>.
                     </p>
                 </div>
                 <div class="benefit-card card-3d" data-tilt>
@@ -216,7 +216,7 @@
 
             <p class="vet-ready-text">Nossos veterinários estão sempre prontos para te atender!</p>
 
-            <h3 class="benefits-title">Com a He Vet você tem:</h3>
+            <h3 class="benefits-title">Com a Hey Vet você tem:</h3>
 
             <div class="benefits-checklist">
                 <div class="check-item">
@@ -229,7 +229,7 @@
                 </div>
                 <div class="check-item">
                     <span class="check-icon">✓</span>
-                    <span>Respostas em até 5 minutos</span>
+                    <span>Respostas rápidas</span>
                 </div>
                 <div class="check-item">
                     <span class="check-icon">✓</span>
@@ -251,13 +251,13 @@
 
         <div class="container">
             <h2 class="section-title comparison-title">Compare e veja a diferença!</h2>
-            <p class="comparison-subtitle">Porque os tutores escolhem a He Vet!</p>
+            <p class="comparison-subtitle">Porque os tutores escolhem a Hey Vet!</p>
 
             <div class="comparison-table">
                 <!-- Headers -->
                 <div class="comparison-table-header">
-                    <div class="table-header without-header">Sem HeVet:</div>
-                    <div class="table-header with-header">Com HeVet:</div>
+                    <div class="table-header without-header">Sem HeyVet:</div>
+                    <div class="table-header with-header">Com HeyVet:</div>
                 </div>
 
                 <!-- Rows -->
@@ -279,7 +279,7 @@
                     </div>
                     <div class="table-cell with-cell">
                         <span class="cell-icon">✓</span>
-                        Atendimento em até 5 min
+                        Atendimento rápidos
                     </div>
                 </div>
 
@@ -744,3 +744,4 @@
 
 
 </html>
+
